--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <!--Шапка сайта-->
 <header>
- <a href="/">WebStudio</a>
+ <a href="./index.html">WebStudio</a>
  <nav>
    <ul>
       <li><a href="">Студия</a></li>
@@ -54,9 +54,9 @@
 <section>
   <h2>Чем мы занимаемся</h2>
   <ul>
-    <li><img src="/images/box1.jpg" alt="Услуга 1" width="370"></li>
-    <li><img src="/images/box2.jpg" alt="Услуга 2" width="370"></li>
-    <li><img src="images/box3.jpg" alt="Услуга 3" width="370"></li>
+    <li><img src="./images/box1.jpg" alt="Услуга 1" width="370"></li>
+    <li><img src="./images/box2.jpg" alt="Услуга 2" width="370"></li>
+    <li><img src="./images/box3.jpg" alt="Услуга 3" width="370"></li>
   </ul>
 </section>
 <!--Наша команда-->
@@ -64,22 +64,22 @@
   <h2>Наша команда</h2>
   <ul>
     <li>
-      <img src="/images/team1.jpg" alt="Игорь Демьяненко" width="270">
+      <img src="./images/team1.jpg" alt="Игорь Демьяненко" width="270">
       <h3>Игорь Демьяненко</h3>
       <p>Product Designer</p>
     </li>
     <li>
-      <img src="/images/team2.jpg" alt="Ольга Репина" width="270">
+      <img src="./images/team2.jpg" alt="Ольга Репина" width="270">
       <h3>Ольга Репина</h3>
       <p>Frontend Developer</p>
     </li>
     <li>
-      <img src="/images/team3.jpg" alt="Николай Тарасов" width="270">
+      <img src="./images/team3.jpg" alt="Николай Тарасов" width="270">
       <h3>Николай Тарасов</h3>
       <p>Marketing</p>
     </li>
     <li>
-      <img src="/images//team4.jpg" alt="Михаил Ермаков" width="270">
+      <img src="./images//team4.jpg" alt="Михаил Ермаков" width="270">
       <h3>Михаил Ермаков</h3>
       <p>UI Designer</p>
     </li>
